examples/test/testpolicy1030.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1030
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key39: value41
      key15: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value24
      podSelector:
        matchLabels:
          key31: value34
          key19: value24
